<resources>
    <string name="app_name">ExpenseTracker</string>
    <string name="create_account">Create Account</string>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="verify_password">Verify Password</string>
    <string name="total_expenses">Total Expenses</string>
    <string name="new_expense_name">New Expense Name</string>
    <string name="add_expense">Add Expense</string>
    <string name="create_new_group">Create New Group</string>
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="participants_hint">Participant Emails (separate by ,)</string>
    <string name="create_group">Create Group</string>
    <string name="create_or_join_group">Create/Join Group</string>
    <string name="join_group_hint">Group Key</string>
    <string name="join_group">Join Group</string>
    <string name="already_have_an_account">Already have an account？</string>
    <string name="log_in">Log in</string>
    <string name="join_group_by_key">Join Group Via Key</string>
</resources>