<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGroupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="413dp"
        android:layout_height="107dp"
        android:layout_marginStart="-1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/create_group_top" />


    <TextView
        android:id="@+id/create_group_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_group"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.08" />

    <EditText
        android:id="@+id/group_name_et"
        android:layout_width="310dp"
        android:layout_height="0dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/group_name"
        android:textColor="#FFFFFF"
        android:textColorHint="#AAAAAA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/group_description_et"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/group_description"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_name_et" />

    <Button
        android:id="@+id/create_group_button"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="102dp"
        android:layout_marginRight="32dp"
        android:onClick="createGroup"
        android:text="@string/create_group"
        app:cornerRadius="20dp"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/group_description_et" />

    <TextView
        android:id="@+id/join_group_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_group"
        app:layout_constraintBottom_toTopOf="@id/join_group_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/join_group_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/join_group_hint"
        app:layout_constraintBottom_toTopOf="@id/join_group_button" />

    <Button
        android:id="@+id/join_group_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:onClick="joinGroup"
        android:text="@string/join_group"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="56dp"
        android:tint="#192059"
        app:layout_constraintEnd_toStartOf="@+id/group_name_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:srcCompat="@drawable/pencil" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toStartOf="@+id/group_description_et"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:srcCompat="@drawable/text_description" />

</androidx.constraintlayout.widget.ConstraintLayout>