<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateAccountActivity">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_label" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="18dp"
        android:layout_height="23dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/email_et"
        app:layout_constraintEnd_toStartOf="@+id/email_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email_et"
        app:srcCompat="@drawable/ic_round_email" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="18dp"
        android:layout_height="22dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toBottomOf="@+id/password_et"
        app:layout_constraintEnd_toStartOf="@+id/password_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_et"
        app:srcCompat="@drawable/bxs_lock" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="18dp"
        android:layout_height="22dp"
        app:layout_constraintBottom_toBottomOf="@+id/verify_password_et"
        app:layout_constraintEnd_toStartOf="@+id/verify_password_et"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/verify_password_et"
        app:srcCompat="@drawable/bxs_lock" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_marginTop="32dp"
        android:layout_width="200dp"
        android:layout_height="119dp"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002"
        app:srcCompat="@drawable/split_easier___1_"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/email_et"
        android:layout_marginTop="16dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/username"
        android:minHeight="48dp"
        android:textColor="#B4808080"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <Button
        android:id="@+id/create_account_label"
        android:layout_width="339dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:backgroundTint="#192059"
        android:onClick="createAccount"
        android:text="@string/create_account"
        app:cornerRadius="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_password_et" />

    <EditText
        android:id="@+id/verify_password_et"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/verify_password"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_et"/>

    <EditText
        android:id="@+id/password_et"
        android:layout_width="250dp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="@string/password"
        android:minHeight="48dp"
        android:textColor="#E6CCCCCC"
        android:textColorHint="#757575"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_et" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:minWidth="48dp"
        android:onClick="navigateToLogin"
        android:minHeight="48dp"

        android:text="@string/log_in"
        android:textColor="#6E7EFC"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.189"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/create_account_label" />

</androidx.constraintlayout.widget.ConstraintLayout>