<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ExpensesActivity">

    <TextView
        android:id="@+id/expense_value_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toEndOf="@+id/expense_label"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/expense_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/total_expenses"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />


    <EditText
        android:id="@+id/new_expense_et"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:hint="@string/new_expense_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expense_label"
        app:layout_constraintVertical_bias="0.093" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/new_expense_et"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_expense"
        android:onClick="addExpense"
        app:layout_constraintStart_toEndOf="@+id/new_expense_et"
        app:layout_constraintTop_toTopOf="@+id/new_expense_et" />


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/main_list_view"
        app:layout_constraintTop_toBottomOf="@+id/new_expense_et"
        app:layout_constraintVertical_bias="0.134"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>